[build-system]
requires = ["setuptools>=42.0.0", "wheel>=0.29.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.pyright]
exclude = ["**/__pycache__", "noaa.egg-info"]
reportMissingImports = false
reportMissingModuleSource = false
pythonVersion = "3.7"

[tool.isort]
multi_line_output = 5

[tool.pylint.master]
ignore = ["__init__.py", "docs", "tests", "__pycache__"]
jobs = 0
persistent = "yes"

[tool.pylint.messages_control]
disable = [
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
]
