[metadata]
name = noaa
version = attr: noaa.attr.__version__
url = https://github.com/exTerEX/noaa-python # TODO: Consider creating landingpage
download_url = https://github.com/exTerEX/noaa-python/releases
project_urls =
    Source Code = https://github.com/exTerEX/noaa-python
    Bug Tracker = https://github.com/exTerEX/noaa-python/issues
author = Andreas Sagen
author_email = developer@sagen.io
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Atmospheric Science
license = MIT
license_files = LICENSE
description = Python API for NOAA climate data
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = data, atmosphere
platforms = any

[options]
zip_safe = False
python_requires = >=3.6
include_package_data = False
packages = find:

[options.packages.find]
exclude = docs, tests

[bdist_wheel]
universal = 1
